crates/dekaf/tests/snapshots/field_extraction_tests__allof_with_null_default.snap
---
source: crates/dekaf/tests/dekaf_schema_test.rs
expression: output?
---
Record(
    [
        (
            "id",
            Long(
                1234,
            ),
        ),
        (
            "conflicts",
            Union(
                1,
                Null,
            ),
        ),
        (
            "flow_published_at",
            Union(
                0,
                Record(
                    [
                        (
                            "json",
                            String(
                                "null",
                            ),
                        ),
                    ],
                ),
            ),
        ),
    ],
)
