crates/dekaf/tests/snapshots/field_extraction_tests__deletions-0.snap
---
source: crates/dekaf/tests/field_extraction_tests.rs
expression: output?
---
Record(
    [
        (
            "key",
            String(
                "first",
            ),
        ),
        (
            "flow_published_at",
            Union(
                0,
                Record(
                    [
                        (
                            "json",
                            String(
                                "null",
                            ),
                        ),
                    ],
                ),
            ),
        ),
        (
            "_is_deleted",
            Long(
                0,
            ),
        ),
    ],
)
