crates/dekaf/tests/snapshots/field_extraction_tests__deletions-1.snap
---
source: crates/dekaf/tests/field_extraction_tests.rs
expression: output?
---
Record(
    [
        (
            "key",
            String(
                "second",
            ),
        ),
        (
            "_meta_op",
            Union(
                0,
                String(
                    "d",
                ),
            ),
        ),
        (
            "flow_published_at",
            Union(
                0,
                Record(
                    [
                        (
                            "json",
                            String(
                                "null",
                            ),
                        ),
                    ],
                ),
            ),
        ),
        (
            "_is_deleted",
            Long(
                1,
            ),
        ),
    ],
)
