crates/dekaf/tests/snapshots/field_extraction_tests__field_selection_flow_document.snap
---
source: crates/dekaf/tests/field_extraction_tests.rs
assertion_line: 334
expression: output?
---
Record(
    [
        (
            "key",
            String(
                "first",
            ),
        ),
        (
            "flow_published_at",
            Union(
                0,
                Record(
                    [
                        (
                            "json",
                            String(
                                "null",
                            ),
                        ),
                    ],
                ),
            ),
        ),
        (
            "flow_document",
            Record(
                [
                    (
                        "field_a",
                        String(
                            "foo",
                        ),
                    ),
                    (
                        "field_b",
                        String(
                            "bar",
                        ),
                    ),
                    (
                        "key",
                        String(
                            "first",
                        ),
                    ),
                    (
                        "_flow_extra",
                        Map(
                            {},
                        ),
                    ),
                ],
            ),
        ),
    ],
)
