crates/dekaf/tests/snapshots/field_extraction_tests__field_selection_recommended_fields.snap
---
source: crates/dekaf/tests/field_extraction_tests.rs
expression: output?
---
Record(
    [
        (
            "key",
            String(
                "first",
            ),
        ),
        (
            "field_a",
            String(
                "foo",
            ),
        ),
        (
            "field_b",
            String(
                "bar",
            ),
        ),
        (
            "flow_published_at",
            Union(
                0,
                Record(
                    [
                        (
                            "json",
                            String(
                                "null",
                            ),
                        ),
                    ],
                ),
            ),
        ),
        (
            "invoice_additional_charges",
            Union(
                0,
                Array(
                    [
                        Record(
                            [
                                (
                                    "cost",
                                    Union(
                                        0,
                                        Double(
                                            12.34,
                                        ),
                                    ),
                                ),
                                (
                                    "_flow_extra",
                                    Map(
                                        {},
                                    ),
                                ),
                            ],
                        ),
                        Record(
                            [
                                (
                                    "cost",
                                    Union(
                                        0,
                                        Double(
                                            56.78,
                                        ),
                                    ),
                                ),
                                (
                                    "_flow_extra",
                                    Map(
                                        {},
                                    ),
                                ),
                            ],
                        ),
                    ],
                ),
            ),
        ),
    ],
)
