crates/dekaf/tests/snapshots/field_extraction_tests__field_selection_specific_fields.snap
---
source: crates/dekaf/tests/field_extraction_tests.rs
expression: output?
---
Record(
    [
        (
            "key",
            String(
                "first",
            ),
        ),
        (
            "field_a",
            String(
                "foo",
            ),
        ),
    ],
)
