crates/dekaf/tests/snapshots/field_extraction_tests__fields_with_hyphens.snap
---
source: crates/dekaf/tests/field_extraction_tests.rs
expression: "roundtrip(fixture_path, serde_to_jsonl(docs)?.as_slice()).await"
---
Err(
    "conflict for field \"hyphenated-field\": field is required by the user's field selection but field is forbidden by the connector (Field name hyphenated-field contains characters forbidden in AVRO schemas. It must match the regex '^[A-Za-z_][A-Za-z0-9_]*$'. If you still want to include this field, you can create a projection for this field on the source collection with a name that matches the regex. See https://go.estuary.dev/projections for more information.)",
)
