crates/dekaf/tests/snapshots/field_extraction_tests__longs.snap
---
source: crates/dekaf/tests/field_extraction_tests.rs
expression: "roundtrip(fixture_path.clone(), raw_input.as_bytes()).await"
---
Ok(
    [
        Ok(
            Record(
                [
                    (
                        "key",
                        String(
                            "1234",
                        ),
                    ),
                    (
                        "flow_published_at",
                        Union(
                            0,
                            Record(
                                [
                                    (
                                        "json",
                                        String(
                                            "null",
                                        ),
                                    ),
                                ],
                            ),
                        ),
                    ),
                    (
                        "my_long",
                        Union(
                            0,
                            Long(
                                0,
                            ),
                        ),
                    ),
                ],
            ),
        ),
        Ok(
            Record(
                [
                    (
                        "key",
                        String(
                            "1234",
                        ),
                    ),
                    (
                        "flow_published_at",
                        Union(
                            0,
                            Record(
                                [
                                    (
                                        "json",
                                        String(
                                            "null",
                                        ),
                                    ),
                                ],
                            ),
                        ),
                    ),
                    (
                        "my_long",
                        Union(
                            0,
                            Long(
                                10,
                            ),
                        ),
                    ),
                ],
            ),
        ),
    ],
)
