crates/dekaf/tests/snapshots/field_extraction_tests__null_only_fields.snap
---
source: crates/dekaf/tests/field_extraction_tests.rs
expression: "roundtrip(fixture_path, serde_to_jsonl(docs)?.as_slice()).await"
---
Err(
    "materialization test/materialization field null_only_field is not satisfiable (selector includes field, but connector forbids it with reason: Cannot materialize null-only location)",
)
