crates/dekaf/tests/snapshots/field_extraction_tests__number_or_string_format_number.snap
---
source: crates/dekaf/tests/field_extraction_tests.rs
expression: "roundtrip(fixture_path.clone(), raw_input.as_bytes()).await?"
---
[
    Ok(
        Record(
            [
                (
                    "key",
                    String(
                        "1234",
                    ),
                ),
                (
                    "flow_published_at",
                    Union(
                        0,
                        Record(
                            [
                                (
                                    "json",
                                    String(
                                        "null",
                                    ),
                                ),
                            ],
                        ),
                    ),
                ),
                (
                    "string_int_fmt_numberield",
                    String(
                        "1",
                    ),
                ),
            ],
        ),
    ),
    Ok(
        Record(
            [
                (
                    "key",
                    String(
                        "1234",
                    ),
                ),
                (
                    "flow_published_at",
                    Union(
                        0,
                        Record(
                            [
                                (
                                    "json",
                                    String(
                                        "null",
                                    ),
                                ),
                            ],
                        ),
                    ),
                ),
                (
                    "string_int_fmt_numberield",
                    String(
                        "1",
                    ),
                ),
            ],
        ),
    ),
    Ok(
        Record(
            [
                (
                    "key",
                    String(
                        "1234",
                    ),
                ),
                (
                    "flow_published_at",
                    Union(
                        0,
                        Record(
                            [
                                (
                                    "json",
                                    String(
                                        "null",
                                    ),
                                ),
                            ],
                        ),
                    ),
                ),
                (
                    "string_int_fmt_numberield",
                    String(
                        "1.0",
                    ),
                ),
            ],
        ),
    ),
    Ok(
        Record(
            [
                (
                    "key",
                    String(
                        "1234",
                    ),
                ),
                (
                    "flow_published_at",
                    Union(
                        0,
                        Record(
                            [
                                (
                                    "json",
                                    String(
                                        "null",
                                    ),
                                ),
                            ],
                        ),
                    ),
                ),
                (
                    "string_int_fmt_numberield",
                    String(
                        "1.1",
                    ),
                ),
            ],
        ),
    ),
    Ok(
        Record(
            [
                (
                    "key",
                    String(
                        "1234",
                    ),
                ),
                (
                    "flow_published_at",
                    Union(
                        0,
                        Record(
                            [
                                (
                                    "json",
                                    String(
                                        "null",
                                    ),
                                ),
                            ],
                        ),
                    ),
                ),
                (
                    "string_int_fmt_numberield",
                    String(
                        "1",
                    ),
                ),
            ],
        ),
    ),
]
