crates/dekaf/tests/snapshots/field_extraction_tests__old-deletions-2.snap
---
source: crates/dekaf/tests/dekaf_schema_test.rs
expression: doc?
---
Record(
    [
        (
            "_meta",
            Record(
                [
                    (
                        "is_deleted",
                        Long(
                            1,
                        ),
                    ),
                    (
                        "op",
                        Union(
                            0,
                            String(
                                "d",
                            ),
                        ),
                    ),
                    (
                        "_flow_extra",
                        Map(
                            {},
                        ),
                    ),
                ],
            ),
        ),
        (
            "key",
            String(
                "second",
            ),
        ),
        (
            "_flow_extra",
            Map(
                {
                    "additional": String(
                        "I should end up in _flow_extra",
                    ),
                },
            ),
        ),
    ],
)
